[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collectiontools_vrb"
dynamic = ["version"]
authors = [
  { name="volker", email="volker@vrbdev.eu" },
]
maintainers = [
  { name="volker", email="volker@vrbdev.eu" },
]
description = "Various tools to handle collection I/O and transformations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "aiohttp",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/v-r-b/collectiontools_vrb"
Issues = "https://github.com/v-r-b/collectiontools_vrb/issues"

[tool.hatch.version]
path = "./src/collectiontools_vrb/__version__.py"

[tool.hatch.build]
exclude = [
  "/.*",
  "/docs",
  "/tests",
]